# customer_portal

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml
customer_portal/: hooks.py  setup.py
customer_portal/api/: portal.py
customer_portal/customer_portal/doctype/cp_portal_doctype/: cp_portal_doctype.json  cp_portal_doctype.py
customer_portal/customer_portal/doctype/cp_portal_settings/: cp_portal_settings.json  cp_portal_settings.py
customer_portal/public/dashboard/: index.html
customer_portal/public/dashboard/assets/: Button-CsXftwTu.js  FeatherIcon-DrgwUD5b.js  FontColor-rNWfV0dX.js  InsertIframe-DNAFr0G2.js  MainLayout-BxFMRerB.css  MainLayout-BzQlP9mg.js  RecordDetail-DpZG5osL.js  RecordList-CyzC0ZQu.js  SelectDoctype-DlBIsyrP.js  Tooltip-Bz2RnE1h.js  TooltipBubble-zgh-sdyR.js  auth-Dr4Lr0Hi.js  call-CqPJepAD.js  index-CLnyT_IN.css  index-pckbtSgJ.js  portal-CD98Qtze.js
customer_portal/public/portal/: index.html
customer_portal/www/: dashboard.py
customer_portal/www/portal/: index.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: main.ts
dashboard/src/components/: Sidebar.vue  SidebarLink.vue
dashboard/src/layouts/: MainLayout.vue
dashboard/src/pages/: RecordDetail.vue  RecordList.vue
frontend/: components.d.ts  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/pages/: SelectDoctype.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
portal/src/: App.vue
portal/src/stores/: portal.ts
(+24 files in other folders)
