[project]
name = "customer_portal"
authors = [{ name = "Frontiers of Technology", email = "dev@frontiersoftech.com" }]
description = "Configurable Customer Portal for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"

[tool.bench.assets]
build_dir = "./portal"
out_dir = "./customer_portal/public/portal"
index_html_path = "./customer_portal/www/portal/index.html"
